tests/baselines/reference/moduleProperty1.errors.txt
moduleProperty1.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleProperty1.ts(7,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
moduleProperty1.ts(9,5): error TS1128: Declaration or statement expected.
moduleProperty1.ts(9,13): error TS2304: Cannot find name 'y'.
moduleProperty1.ts(10,20): error TS2304: Cannot find name 'y'.


==== moduleProperty1.ts (5 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x=10;  // variable local to this module body
        var y=x;  // property visible only in module
        export var z=y;  // property visible to any code
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        var x = 10;  // variable local to this module body
        private y = x;  // can't use private in modules
        ~~~~~~~
!!! error TS1128: Declaration or statement expected.
                ~
!!! error TS2304: Cannot find name 'y'.
        export var z = y;  // property visible to any code
                       ~
!!! error TS2304: Cannot find name 'y'.
    }